Fixed "None" initialization of user-library-store
- overall fixed logic of storage and search/library id's and logic
- also added edit icon

--- a/assets/style.css
+++ b/assets/style.css
@@ -8,3 +8,8 @@
     background-color: #0052B5; /* Darker baby blue background */
     color: #fff; /* White text */
 }
+
+.search-row:hover, .library-row:hover {
+    background-color: #DAE9F4; /* Background color on hover */
+    color: #0052B5; /* Text color */
+}
