First working prototype!
- first fully working code that incorporates all the features for the prototype:
- Features: Song Features Display, Song Feature Storage, Clickable Links, and Optimized Layout for Browser/iPad
- added all the resource icons and made them edit the link
- updated prepare_data.py to also include track image and pull genre from genres.csv
- song row display overhaul: display album/track cover image, as well as "title" with "artist" below, made sure they all align horizontally and vertically to the center

--- a/assets/style.css
+++ b/assets/style.css
@@ -1,4 +1,13 @@
 /* assets/style.css */
+html, body {
+    min-width: 750px;
+    width: 100%;
+}
+
+.search-row, .library-row {
+    min-width: 500px;
+}
+
 .nav-link-custom:hover {
     background-color: #95CDF6; /* Background color on hover */
     color: #0052B5; /* Text color */
@@ -18,10 +27,15 @@
     z-index: 1040 !important;
 }
 
-.base-modal {
+.info-modal {
     z-index: 1050 !important;
 }
 
 .input-modal {
-    z-index: 1060 !important;
+    z-index: 1060 !important; /* Ensure input modal is always over info modal  */
+}
+
+.resource-icon:hover {
+    box-shadow: 0 0 5px rgba(0, 123, 255, 0.6); /* Blue box-shadow for a subtle highlight effect */
+    background-color: rgba(0, 123, 255, 0.3); /* Light blue background on hover */
 }
